@@ -264,7 +264,14 @@ Internet Archive at <a href="http://web.archive.org/web/20080609234037/http://ca
 
 <h2 id="Rebirth">Rebirth</h2>
 
-<p>During the PST to PDT time change in early 2008, I noticed what appeared to be a bug in the time display for Sol where it did not seem to update to displaying PDT time until the day after the time change.  So I emailed Dan on 2008-03-09 and asked him if he might be willing to share the source code since his website indicated "Captain Dan has retired."  As a result, Dan was kind enough to release the sources on 2008-03-12 and let me know about it whereupon I immediately downloaded and saved a copy of the sources.
+<p>During the PST to PDT time change in early 2008, I noticed what appeared to be a bug
+
+<span class="sidebar">
+<i>The DST Bug</i><br />
+<a href="http://code.google.com/p/solwidget/issues/detail?id=9">The bug</a> was finally fixed in Sol version 1.3.2.  It turned out to be a more general problem with the way the JavaScript code handled the time zone of the selected location.
+</span>
+
+in the time display for Sol where it did not seem to update to displaying PDT time until the day after the time change.  So I emailed Dan on 2008-03-09 and asked him if he might be willing to share the source code since his website indicated "Captain Dan has retired."  As a result, Dan was kind enough to release the sources on 2008-03-12 and let me know about it whereupon I immediately downloaded and saved a copy of the sources.
 </p>
 
 <p>The Sol source code which I had downloaded and intended to play with just sat and sat on my hard disk completely ignored but safely tucked away.
