@@ -155,8 +155,8 @@ static int compare_city(const void *p1, const void *p2)
         return @"lookupPlaceInRegionWithName";
     if (aSelector == @selector(setTimeZoneWithName:))
         return @"setTimeZoneWithName";
-    if (aSelector == @selector(timeOffsetHoursForDate:))
-        return @"timeOffsetHoursForDate";
+    if (aSelector == @selector(timeOffsetMillisForDate:))
+        return @"timeOffsetMillisForDate";
 
     return nil;
 }
@@ -179,9 +179,7 @@ static int compare_city(const void *p1, const void *p2)
         return NO;
     if (aSelector == @selector(setTimeZoneWithName:))
         return NO;
-    if (aSelector == @selector(timeOffsetHours))
-        return NO;
-    if (aSelector == @selector(timeOffsetHoursForDate:))
+    if (aSelector == @selector(timeOffsetMillisForDate:))
         return NO;
 
     return YES;
@@ -211,16 +209,11 @@ static int compare_city(const void *p1, const void *p2)
     _timeZone = [newTimeZone retain];
 }
 
-- (double)timeOffsetHours
-{
-    return [_timeZone secondsFromGMT] / 3600.0;
-}
-
-- (double)timeOffsetHoursForDate:(double)dateMillis
+- (double)timeOffsetMillisForDate:(double)dateMillis
 {
     /* dateMillis is a JavaScript UTC milliseconds since 1970 value */
     NSDate *date = [NSDate dateWithTimeIntervalSince1970: dateMillis / 1000.0];
-    return [_timeZone secondsFromGMTForDate: date] / 3600.0;
+    return [_timeZone secondsFromGMTForDate: date] * 1000.0;
 }
 
 - (NSString *)formattedTimeForDate:(double)dateMillis
